# harness-bench

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  pyproject.toml
agents/: benchmark-designer.md  methodology-editor.md  output-reviewer.md
commands/: leaderboard.md  score-run.md
examples/: sample_run.json
methodology/: README.md  comparability-contract.md  v0.1.md
rubrics/: default-rubric.yaml
rules/common/: claims.md  fairness.md
schemas/: run-artifact.schema.json  run.schema.json
skills/benchmark-design/: SKILL.md
skills/cross-harness-scoring/: SKILL.md
skills/methodology-writing/: SKILL.md
src/harness_bench/: cli.py  core.py
tasks/: task-library.md
tests/: test_core.py
