[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-bench"
version = "0.1.0"
description = "Cross-harness benchmark scoring framework"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
harness-bench = "harness_bench.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
